k8s/api/smart-meal-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-meal-back
  labels:
    app: smart-meal-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-meal-back
  template:
    metadata:
      labels:
        app: smart-meal-back
    spec:
      containers:
        - name: smart-meal-back
          image: marcobalamon/smart-meal-back-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7172
