k8s/api/smart-meal-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-meal-back
  labels:
    app: smart-meal-back
spec:
  type: NodePort
  ports:
    - port: 7172
      targetPort: 7172
      nodePort: 30002
  selector:
    app: smart-meal-back
