k8s/api/smart-meal-back-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smart-meal-back-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - smart-meal-back-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 7172
            host: smart-meal-back.default.svc.cluster.local
